<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Usuario</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registrar">Registrarse</string>
    <string name="title_activity_bienvenido">Bienvenido(a)</string>
    
    <string name="login_titulo">Ingresar sistema</string>
    <string name="login_usuario">Usuario:</string>
    <string name="login_contrasena">Contraseña:</string>
    <string name="login_btn_registrar">Registrarse</string>
    <string name="login_btn_ingresar">Ingresar</string>
    
    <string name="registrar_titulo">Registrar Usuario</string>
    <string name="registrar_cedula">Cedula:</string>
    <string name="registrar_nombre">Nombre(s):</string>
    <string name="registrar_apellidos">Apellido(s):</string>
    <string name="registrar_usuario">Usuario:</string>
    <string name="registrar_contrasena">Contraseña:</string>
    <string name="registrar_btn_guardar">Guardar</string>
    <string name="registrar_btn_regresar">Regresar</string>
    
    <string name="bienvenido_bienvenido">Bienvenido(a)</string>
    <string name="bienvenido_nombre">Nombre(s):</string>
    <string name="bienvenido_apellido">Apellido(s):</string>
    <string name="bienvenido_usuario">Usuario:</string>

</resources>